--- a/app/views/competitions/edit.html.haml
+++ b/app/views/competitions/edit.html.haml
@@ -1,7 +1,8 @@
-%h1 Editing competition
+#content
+	%h1 Editing competition
 
-= render 'form'
+	= render 'form'
 
-= link_to 'Show', @competition
-\|
-= link_to 'Back', competitions_path
+	= link_to 'Show', @competition
+	\|
+	= link_to 'Back', competitions_path
