--- a/app/views/competitions/homepage.html.haml
+++ b/app/views/competitions/homepage.html.haml
@@ -1,178 +1,176 @@
 #container-slider
   =image_tag("slider-1.png")
+  .overlay
+    =image_tag("banner-overlay.png")
 
 #container-match-overview
   // Start active matches
   .container.active
     .container-top.brush
       %h2
-        Actieve kunstwedstrijden
+        Aankomende kunstwedstrijden
       %p
         deelnemen aan de wedstrijd
-    .container-information
-      .content
-        %span
-          Wedstrijd:
-        %h3
-          Naam
-        %p
-          Sponsor naam
-        %p
-          Einde inschrijving: 14-08-2014
-      =image_tag("logo-drents.png")
-      %a{:href => "/", :class => "more-info"}Meer weten
-      %a{:href => "/", :class => "participate"}Deelnemen aan de wedstrijd
-    
-    .container-overlay-contest
-      .close
-        X
-      .content-left
-        %span
-          Wedstrijd: 
-        %h3
-          Dali Sunset
-        %br
-        %span
-          Omschrijving van de wedstrijd:
-        %p
-          De Dali sunset wedstrijd wordt georganiseerd door het drents museum, we willen graag een interpertatie van een zon’s opgang. Met als inspiratie Dali.
-          %br
-          %br
-          Doe mee en win een expositie ruimte
-        %p
-          %br
-          Einde inschrijving: 14-08-2014
-        %ul#prize
-          %li
-            %span
-              1
-            %p
-              1 jaar lang expositie in het drents museum 
-          %li
-            %span
-              2
-            %p
-              6 maanden expositie in het drents museum
-          %li
-            %span
-              3
-            %p
-              1 maand expositie in het drents museum
-      .content-middle
-        %h2
-          Kunstwerk uploaden
-        %span
-          Upload hier je kunstwerk om mee te doen
-          %br
-        %button
-        %br
-        %span
-          Alleen deze bestandtypes: jpg, png, jpeg of pdf
-          %br
-          Formaat: max 2mb
-      .content-right
-        %h2
-          Titel en omschrijving
-        %span
-          Kies voor een duidelijk omschrijving en titel
-        %br
-        %br
-        %label 
-          Titel
-        %input{:type=>"text", :required => true , :placeholder => 'Kunstwerk titel'}
-        %label
-          Omschrijving
-        %textarea{:required => true , :placeholder => 'Kunstwerk omschrijving'}
-        %a{:href => "/", :class => "add"}Deelnemen aan de wedstrijd
 
-    .container-overlay-info
-      .close
-        X
-      .content-left
-        %span
-          Wedstrijd: 
-        %h3
-          Dali Sunset
-        %br
-        %span
-          Omschrijving van de wedstrijd:
-        %p
-          De Dali sunset wedstrijd wordt georganiseerd door het drents museum, we willen graag een interpertatie van een zon’s opgang. Met als inspiratie Dali.
-          %br
-          %br
-          Doe mee en win een expositie ruimte
-        %p
-          %br
-          Einde inschrijving: 14-08-2014
-        %ul#prize
-          %li
+    - @competitions.each do |competition|
+      - if Time.now.in_time_zone("Amsterdam") <= competition.deadline_signin && Time.now.in_time_zone("Amsterdam") <= competition.deadline
+        .container-information
+          .content
+            =image_tag("logo-drents.png", :class => "sponsor")
             %span
-              1
+              Wedstrijd:
+            %h3
+              = link_to competition.title, competition           
             %p
-              1 jaar lang expositie in het drents museum 
-          %li
-            %span
-              2
+              Sponsor:
+              = competition.user.name
             %p
-              6 maanden expositie in het drents museum
-          %li
-            %span
-              3
-            %p
-              1 maand expositie in het drents museum
-      .content-middle
-        %span
-          Mogelijk gemaakt door: 
-        %h2
-          Drents Museum
-        =image_tag("logo-drente.png")
+              Deadline inleveren:
+              = competition.deadline_signin.strftime('%e %B %Y') 
 
-    .container-information
-      .content
-        %span
-          Wedstrijd:
-        %h3
-          Naam
-        %p
-          Sponsor naam
-        %p
-          Einde inschrijving: 14-08-2014
-      =image_tag("logo-drents.png")
-      %a{:href => "/", :class => "more-info"}Meer weten
-      %a{:href => "/", :class => "participate"}Deelnemen aan de wedstrijd
+            %a{:href => "/", :class => "more-info buttons"}Meer weten
+            %a{:href => "/", :class => "participate buttons"}Inschrijven
+
+            .container-overlay-info
+              .close
+                X
+              .content-left
+                %span
+                  Wedstrijd: 
+                %h3
+                  = link_to competition.title, competition
+                %br
+                %span
+                  Omschrijving van de wedstrijd:
+                %p
+                  = competition.description
+                %p
+                  Deadline inleveren:
+                  = competition.deadline_signin.strftime('%e %B %Y') 
+                %ul#prize
+                  %li
+                    %span
+                      1
+                    %p
+                      = competition.prize 
+                  %li
+                    %span
+                      2
+                    %p
+                      = competition.prize_2
+                  %li
+                    %span
+                      3
+                    %p
+                      = competition.prize_3
+              .content-middle
+                %span
+                  Mogelijk gemaakt door: 
+                %h2
+                  = competition.user.name
+                %p
+                  Hier staat informatie uit het profiel over de sponsor. Zoals een link naar de site, huidige kunstwerken die er nu hangen etc. Maar voor nu is het opvul
+                =image_tag("logo-drente.png")
+
+            .container-overlay-contest
+              .close
+                X
+              .content-left
+                %span
+                  Wedstrijd: 
+                %h3
+                  = link_to competition.title, competition
+                %br
+                %span
+                  Omschrijving van de wedstrijd:
+                %p
+                  = competition.description
+                %p
+                  Inschrijf deadline:
+                  = competition.deadline.strftime('%e %B %Y')
+                %ul#prize
+                  %li
+                    %span
+                      1
+                    %p
+                      = competition.prize 
+                  %li
+                    %span
+                      2
+                    %p
+                      = competition.prize_2
+                  %li
+                    %span
+                      3
+                    %p
+                      = competition.prize_3
+              .content-middle
+                %p
+                  Door je in te schrijven ga je akkoord met de spelregels van 
+                  %a{:href => "/"}Appsynt
+                  en de 
+                  %a{:href => "/"}sponsor.
+                  %br
+                  %br
+                  Je wordt via de mail op de hoogte gebracht wanneer jouw kunstwerk verstuurd moet worden.
+                %a{:href => "/", :class => "participate buttons"}Inschrijven
+
+            -# .content-middle
+            -#   %h2
+            -#     Kunstwerk uploaden
+            -#   %span
+            -#     Upload hier je kunstwerk om mee te doen
+            -#     %br
+            -#   %button
+            -#   %br
+            -#   %span
+            -#     Alleen deze bestandtypes: jpg, png, jpeg of pdf
+            -#     %br
+            -#     Formaat: max 2mb
+            -# .content-right
+            -#   %h2
+            -#     Titel en omschrijving
+            -#   %span
+            -#     Kies voor een duidelijk omschrijving en titel
+            -#   %br
+            -#   %br
+            -#   %label 
+            -#     Titel
+            -#   %input{:type=>"text", :required => true , :placeholder => 'Kunstwerk titel'}
+            -#   %label
+            -#     Omschrijving
+            -#   %textarea{:required => true , :placeholder => 'Kunstwerk omschrijving'}
+            -#   %a{:href => "/", :class => "add"}Deelnemen aan de wedstrijd
+
   // End active matches
 
   // Start vote matches
   .container.vote
     .container-top.check
       %h2
-        Stembare kunstwedstrijden
+        Actieve kunstwedstrijden
       %p
         Stemmen op kunst
+    
+    - @competitions.each do |competition|
+      - if Time.now.in_time_zone("Amsterdam") >= competition.deadline_signin && Time.now.in_time_zone("Amsterdam") <= competition.deadline
+        .container-information
+          .content
+            %span
+              Wedstrijd:
+            %h3
+              = link_to competition.title, competition
+            #images
+              = link_to competition do
+                - competition.pictures.shuffle.each do |picture|
+                  = image_tag(picture.image_url)
+            %p
+              Einde stemronde: 
+              = competition.deadline.strftime('%e %B %Y')
+          = link_to competition, :class => "buttons" do
+            Ingezonden kunst
+          %a{:href => "/", :class => "stemmen buttons participate"}Breng je stem uit
 
-    .container-information
-      .content
-        %span
-          Wedstrijd:
-        %h3
-          Naam
-        =image_tag("dali-sunset.png")
-        %p
-          Einde stemronde: 14-08-2014
-      %a{:href => "/", :class => "ingezonden-kunst"}Ingezonden kunst
-      %a{:href => "/", :class => "stemmen"}Breng je stem uit
-
-    .container-information
-      .content
-        %span
-          Wedstrijd:
-        %h3
-          Naam
-        =image_tag("dali-sunset.png")
-        %p
-          Einde stemronde: 14-08-2014
-      %a{:href => "/", :class => "ingezonden-kunst"}Ingezonden kunst
-      %a{:href => "/", :class => "stemmen"}Breng je stem uit
   // End vote matches
 
   // Start art winner
@@ -190,10 +188,8 @@
         %h3
           Naam
         =image_tag("winner-art.png")
-        %p
-          Einde stemronde: 14-08-2014
-      %a{:href => "/", :class => "check-art"}Kunstwerk bekijken
-      %a{:href => "/", :class => "check-portfolio"}Portfolio bekijken
+      %a{:href => "/", :class => "check-art buttons"}Kunstwerk bekijken
+      %a{:href => "/", :class => "check-portfolio buttons"}Portfolio bekijken
 
     .container-overlay-picture
       .close
