--- a/app/views/competitions/new.html.haml
+++ b/app/views/competitions/new.html.haml
@@ -1,5 +1,6 @@
-%h1 Wedstrijd aanmaken
+#content
+  %h1 Wedstrijd aanmaken
 
-= render 'form'
-
-= link_to 'Back', competitions_path
+  = render 'form'
+  #buttons
+    = link_to 'Back', competitions_path
