--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -5,8 +5,6 @@
     = stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true
     = stylesheet_link_tag     "//code.jquery.com/ui/1.10.4/themes/smoothness/jquery-ui.css"
     // %link{href: "http://fonts.googleapis.com/css?family=Muli:400,300italic", rel: "stylesheet", type: "text/css"}/
-    = javascript_include_tag "masonry.pkgd.js", "data-turbolinks-track" => true
-    = javascript_include_tag "imagesloaded.pkgd.js", "data-turbolinks-track" => true
     = javascript_include_tag "application", "data-turbolinks-track" => true
     = javascript_include_tag "//ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/jquery-ui.min.js"
     = csrf_meta_tags
@@ -52,7 +50,11 @@
           %li 
             %a{:href => "/"}Contact opnemen
           %li 
-            %a{:href => "/"}Menu sluiten
+            - if signed_in?
+              - unless current_user.administrator?
+                = link_to "Ondernemers", new_businessrequest_path
+            - if signed_in? && current_user.administrator?
+              = link_to "administrator tools", users_path
 
       #register
         - if signed_in? 
@@ -60,13 +62,8 @@
         - else
           %span
           = link_to 'Registreren', new_user_path
-
+          
       #login
-        - if signed_in?
-          - unless current_user.administrator?
-            = link_to "Ondernemersaccount aanvragen", new_businessrequest_path
-        - if signed_in? && current_user.administrator?
-          = link_to "administrator tools", users_path
         - if signed_in? 
           = link_to "Uitloggen", signout_path, method: "delete" 
         - else
