--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -811,55 +811,43 @@ div, input, textarea
 /* The element to be centered, can
    also be of any width and height */ 
 
-#container-art-bg
-  text-align: center
-  display: inline-block
-  position: fixed
-  z-index: 1
-  top: 0
-  left: 0
+#container-art
   width: 100%
-  height: 100%
-  background-color: rgba(0, 0, 0, 0.5)
-
-  #container-art
-    width: 95%
-    left: 0
-    right: 0
-    margin: 0 auto
-    z-index: 2
-    padding: 20px
-    background-color: $white
-    height: 100% 
-    overflow: hidden
-    display: inline-block
-    vertical-align: middle
-    h1
+  left: 0
+  right: 0
+  margin: 0 auto
+  z-index: 2
+  background-color: $white
+  height: 100% 
+  overflow: hidden
+  display: inline-block
+  vertical-align: middle
+  h1
+    width: 100%
+    text-align: center
+  .art
+    margin-right: 2%
+    margin-left: 2%
+    margin-bottom: 20%
+    position: relative
+    float: left
+    width: 29%
+    a
       width: 100%
       text-align: center
-    .art
-      margin-right: 2%
-      margin-left: 2%
-      margin-bottom: 20%
-      position: relative
+      display: inline-block
+      color: #fff
+      text-decoration: none
+    img
+      border: 5px solid $black
       float: left
-      width: 29%
-      a
-        width: 100%
-        text-align: center
-        display: inline-block
-        color: #fff
-        text-decoration: none
-      img
-        border: 5px solid $black
-        float: left
-        cursor: pointer
-        width: 100%
-    .the-one
-      float: left
-      border: 5px solid $lime-green!important
-    #container-thanks
-      clear: both
+      cursor: pointer
+      width: 100%
+  .the-one
+    float: left
+    border: 5px solid $lime-green!important
+  #container-thanks
+    clear: both
 
 #wrapper
   width: 700px
@@ -1321,12 +1309,8 @@ div, input, textarea
     color: $orange
     text-decoration: none
 
-  #container-art-bg
-  #container-art
-    width: 90%
-    padding: 0px
-    margin-top: 60px
 
+  #container-art
     .buttons
       padding: 10px 15px
       color: $white
@@ -1345,10 +1329,10 @@ div, input, textarea
       z-index: 20
       float: left
       box-sizing: border-box
-      padding: 20px
-      width: 90%
+      width: 85%
       height: auto
-      border: 3px solid black
+      padding-bottom: 20px
+      border-bottom: 2px solid black
 
     .vote
       position: relative
@@ -1398,10 +1382,11 @@ div, input, textarea
       #divider
         z-index: 10
         position: fixed
-        height: 360px
-        width: 90%
+        height: 300px
+        margin-top: 120px
+        width: 85%
         top: 0
-        background-color: #e4e4e4
+        background-color: $white
       .message
         display: none!important
       .painting
