small styling changes in the divider

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -1380,13 +1380,18 @@ div, input, textarea
       width: 100%
       float: left
       #divider
+        margin-left: -20px
         z-index: 10
         position: fixed
-        height: 300px
-        margin-top: 120px
-        width: 85%
+        height: 320px
+        margin-top: 60px
+        width: 89.2%
         top: 0
         background-color: $white
+        #grey
+          height: 20px
+          width: 100%
+          background-color: #e2e2e2
       .message
         display: none!important
       .painting
