--- a/app/views/competitions/votepage.html.haml
+++ b/app/views/competitions/votepage.html.haml
@@ -20,6 +20,7 @@
 
     #drag
       #divider
+        #grey
       #container.js-masonry
         - @competition.pictures.shuffle.each do |picture|
           .painting.item
