--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -80,3 +80,47 @@
 
     #container-content
       = yield
+
+      #footer
+        .content
+          %h3 
+            appsynt
+          %p 
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut ac eros eget mauris blandit aliquam. In ac purus neque. Praesent faucibus a mauris an ac purus neque. 
+            %br
+            %br
+            Praesent faucibus a mauris att Maecenas ac enim id turpis
+
+        .content
+          %h3 
+            contact
+          %p 
+            info@appsynt.nl
+            %br
+            Ergensstraat 7b 8977DX Amsterdam
+            %br
+            T +32 132456789
+            %br
+            F +32 132465798
+
+        .content
+          %h3 
+            recente tweets
+          .twitter
+            %p 
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut ac eros eget mauris blandit aliquam. In ac purus neque. 
+            .avatar
+              =image_tag("twitter_ava.png")
+          .twitter
+            %p 
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut ac eros eget mauris blandit aliquam. In ac purus neque. 
+            .avatar
+              =image_tag("twitter_ava.png")
+          .twitter
+            %p 
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut ac eros eget mauris blandit aliquam. In ac purus neque. 
+            .avatar
+              =image_tag("twitter_ava.png")
+      
+      #copyright
+        © 2014 Appsynth. All rights reserved.
